# Dowith

./: README.md  about.md  pyproject.toml
docs/: cli.md  index.md  installation.md  tudo.md  user-guide.md
docs/progress/: 2025-08-14.md  2025-08-15.md
dowith/: __init__.py  cli.py  daemon.py
tests/: test_backend_cli.py  test_commands.py  test_daemon.py  test_pm_run.py  test_start.py
