[project]
name = "dowith"
version = "0.1.0"
description = "Role & Workflow Orchestrator for Claude/Gemini (skeleton)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "dowith"}]
dependencies = [
    "typer>=0.9.0",
    "pyyaml",
    "rich"
]

[project.scripts]
dw = "dowith.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
